<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widgets_padding_size.big"
    tools:context=".permission.PermissionDialogFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/greenbox_image"
        android:src="@drawable/il_order_confirmed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widgets_margin_size.big"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/widgets_titleText.bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greenbox_title" />

        <TextView
            android:id="@+id/subTitleTextView"
            style="@style/widgets_subtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greenbox_sub_title" />

        <CheckBox
            android:id="@+id/permissionCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widgets_margin_size.big"
            android:text="@string/greenbox_accept" />

    </LinearLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/greenbox_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
